Made Robot file and fixed packages + added Pixy code

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
   "java.configuration.updateBuildConfiguration": "interactive",
-  "wpilib.online": true
+  "wpilib.online": true,
+  "wpilib.deployOffline": false
 }
